Add project and eclipse configuration files to gitignore

--- a/.settings/.gitignore
+++ b/.settings/.gitignore
@@ -1,1 +1,6 @@
 /.jsdtscope
+/org.eclipse.php.core.prefs
+/org.eclipse.php.formatter.ui.prefs
+/org.eclipse.wst.jsdt.ui.superType.container
+/org.eclipse.wst.jsdt.ui.superType.name
+/org.eclipse.wst.validation.prefs
