--- a/module/WiBase/src/WiBase/Entity/User.php.dist
+++ b/module/WiBase/src/WiBase/Entity/User.php.dist
@@ -36,8 +36,14 @@ class User implements UserInterface, ArraySerializableInterface
 
     protected $refreshToken;
     // OpenID fields
+    /**
+     * @ORM\Column(type="string")
+     */
     protected $username;
 
+    /**
+     * @ORM\Column(type="string")
+     */
     protected $password;
 
     protected $profile;
