--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "zendframework/zendframework" : "~2.4",
     "doctrine/doctrine-orm-module" : "0.*",
     "zfcampus/zf-apigility": "~1.0",
-    "api-skeletons/zf-oauth2-doctrine": "^1.0"
+    "api-skeletons/zf-oauth2-doctrine": "^1.0",
+    "zf-commons/zfc-user": "^1.3",
+    "zf-commons/zfc-user-doctrine-orm": "^1.0"
   },
   "license" : "BSD-3-Clause",
   "keywords" : [ "framework", "zf2" ],
