--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "jquery": "~2.1.4",
     "angular-resource": "~1.4.7",
     "angular-bootstrap": "~0.14.3",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "angular-ui-grid": "~3.0.7"
   }
 }
