--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "angular-resource": "~1.4.7",
     "angular-bootstrap": "~0.14.3",
     "bootstrap": "~3.3.5",
-    "angular-ui-grid": "~3.0.7"
+    "angular-ui-grid": "~3.0.7",
+    "components-font-awesome": "~4.4.0"
   }
 }
