--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
   "require" : {
     "php" : ">=5.3.3",
     "zendframework/zendframework" : "~2.4",
+    "doctrine/doctrine-module": "0.*",
     "doctrine/doctrine-orm-module" : "0.*",
+    "gedmo/doctrine-extensions": "2.3.*",
     "zfcampus/zf-apigility": "~1.0",
     "api-skeletons/zf-oauth2-doctrine": "1.0.1"
   },
