--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,8 @@
     "angular-bootstrap": "~0.14.3",
     "bootstrap": "~3.3.5",
     "angular-ui-grid": "~3.0.7",
-    "components-font-awesome": "~4.4.0"
+    "components-font-awesome": "~4.4.0",
+    "angular-ui-router": "~0.2.15",
+    "ng-tags-input": "3.0.0"
   }
 }
