Restart using git.

--- a/data/DoctrineORMModule/Proxy/.gitignore
+++ b/data/DoctrineORMModule/Proxy/.gitignore
@@ -1,2 +1,14 @@
 /__CG__WiBaseEntityUser.php
 /__CG__ZFOAuth2DoctrineEntityClient.php
+/__CG__CPIpsAPIV1RestAfiliadoAfiliadoEntity.php
+/__CG__CPIpsAPIV1RestAfiliadoAfiliadoEntity.php.57462988880326.90164329
+/__CG__CPIpsAPIV1RestAfiliadoAfiliadoEntity.php.574629d2e36d97.55774205
+/__CG__CPIpsAPIV1RestExamenTipoExamenTipoEntity.php
+/__CG__CPIpsAPIV1RestExamenTipoExamenTipoEntity.php.57362cca6e17d9.66174091
+/__CG__CPIpsAPIV1RestExamenTipoExamenTipoEntity.php.57462de3db1954.93343227
+/__CG__CPIpsAPIV1RestMedicoMedicoEntity.php
+/__CG__WiUserAPIV1RestRoleRoleEntity.php
+/__CG__WiUserAPIV1RestUserUserEntity.php
+/__CG__ZFOAuth2DoctrineEntityClient.php.56e307db7ad931.55845402
+/__CG__ZFOAuth2DoctrineEntityClient.php.56e3083b6dbf39.39066832
+/__CG__ZFOAuth2DoctrineEntityClient.php.56ec87de13c9c8.22826155
